--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,3 +23,5 @@ steps:
       - '--allow-unauthenticated'
 images:
   - us-central1-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/cloudbuilddemo:$SHORT_SHA
+options:
+  logging: CLOUD_LOGGING_ONLY
