--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,4 +24,4 @@ steps:
 images:
   - us-central1-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/cloudbuilddemo:$SHORT_SHA
 options:
-  logging: NONE
+  logging: CLOUD_LOGGING_ONLY
